# mucodec

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
benches/: bench_all.rs  bench_base64.rs  bench_hex.rs  bytes.rs  from_base64.rs  from_hex.rs  list.rs  to_base64.rs  to_hex.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: bytes.rs  error.rs  lib.rs  list.rs  string.rs
src/repr/: base64.rs  bytes.rs  hex.rs  mod.rs  packed.rs
tests/: test_compile.rs
tests/compile_fail/: 01-no-debug.rs  01-no-debug.stderr  02-struct-generics-not-repr-bytes.rs  02-struct-generics-not-repr-bytes.stderr
tests/compile_success/: 01-empty-struct.rs  01-struct.rs  01-unit-struct.rs  02-unit-struct.rs  03-struct-single-field.rs  04-struct-multiple-fields.rs  05-struct-field-types.rs  06-struct-nested.rs  07-struct-generics.rs
