[package]
name = "mucodec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/mucodec"

[dependencies]

[dev-dependencies]
base64 = { version = "0.22.1", features = ["alloc"] }
criterion = { version = "0.5.1" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
paste = "1.0"
proptest = "1.5.0"
rand = "0.8.5"
test-strategy = "0.4.0"

[[bench]]
name = "all"
path = "benches/bench_all.rs"
harness = false

[[bench]]
name = "hex"
path = "benches/bench_hex.rs"
harness = false

[[bench]]
name = "base64"
path = "benches/bench_base64.rs"
harness = false
