[workspace]
members = ["derive"]

[package]
name = "mucodec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/mucodec"

[dependencies]
mucodec-derive = { path = "./derive", optional = true }
proptest = { version = "1.5.0", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
base64 = { version = "0.22.1", features = ["alloc"] }
criterion = { version = "0.5.1" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
paste = "1.0"
proptest = "1.5.0"
test-strategy = "0.4.0"
trybuild = "1.0.101"

[features]
default = []
proptest = ["dep:proptest"]
rand = ["dep:rand"]
derive = ["dep:mucodec-derive"]

[[bench]]
name = "from_hex"
path = "benches/from_hex.rs"
harness = false
required-features = ["rand"]

[[bench]]
name = "to_hex"
path = "benches/to_hex.rs"
harness = false
required-features = ["rand"]

[[bench]]
name = "to_base64"
path = "benches/to_base64.rs"
harness = false
required-features = ["rand"]

[[bench]]
name = "from_base64"
path = "benches/from_base64.rs"
harness = false
required-features = ["rand"]
